# gezondheid

./: .gitignore  README.md  pyproject.toml
gezondheid/: cli.py  config.py  model.py  polars.py
gezondheid/etl/: health.py
